# fast-comment

./: .gitignore  README.md  SETUP.md  build-windows.bat  index.html  package.json  pnpm-lock.yaml  setup-windows.bat  tsconfig.json  vite.config.ts
.claude/: CLAUDE.md  SPEC.md
.omc/: fullralph-prd.json  project-memory.json  wave2.workflow.js  wave4.workflow.js  wave5.workflow.js
.omc/sessions/: f02e8a34-b519-450a-9917-0db2541f8bbf.json
.omc/state/: agent-replay-4b0a4f91-acf2-4764-bdb1-5d88fdbd50d0.jsonl  hud-stdin-cache.json  last-tool-error.json  mission-state.json  subagent-tracking.json
docs/: WINDOWS_BUILD_HANDOFF.md
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: danmaku.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bus.rs  config.rs  lib.rs  main.rs  model.rs  moderation.rs  stats.rs  update.rs
src-tauri/src/sources/: mod.rs  twitch.rs  twitch_helix.rs  twitch_send.rs
src-tauri/src/sources/niconico/: mod.rs
src-tauri/src/sources/youtube/: innertube.rs  live_resolve.rs  metadata.rs  mod.rs  parser.rs
src-tauri/src/tts/: bouyomi.rs  mod.rs  voicevox.rs
src/lib/: danmaku.ts  ipc.ts  stores.svelte.ts  theme.svelte.ts  types.ts  ui.svelte.ts
templates/bubble/: app.js  index.html  style.css
templates/danmaku/: app.js  index.html  style.css
templates/default/: app.js  index.html  style.css
templates/donation/: app.js  index.html  style.css
templates/goals/: app.js  index.html  style.css
templates/ranking/: app.js  index.html  style.css
(+82 files in other folders)
